# gp-model

./: .gitignore  README.org  pyproject.toml
src/gp_model/: __init__.py
