[project]
name = "gp-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nisch", email = "nm2508@nyu.edu" }
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "scikit-image>=0.25.0",
    "scikit-learn>=1.6.0",
    "scipy>=1.14.1",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
